bad/return_int_in_func_returning_void.example_compiler_output
ERROR
[1mbad/return_int_in_func_returning_void.lat:3:22: [1;31merror: [0;1mreturned value of type `int` is not convertible to return type `void`[m
void test() { return 42; }
                     [1;32m^[m
